added admin-layout and icons components

--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="logo">
   <a href="https://zondahome.com/" class="simple-text">
     <div class="logo-img">
-      <img src="/assets/img/zonda-logo.jpg/" alt="ZondaHome logo">
+      <img src="/assets/img/angular2-logo-red.png/" alt="logo">
     </div>
     Creative Tim
   </a>
