added horizontal scrolling list and sample search feature

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,8 @@
 <h1>{{ title }}</h1>
 <p>Welcome to the Housing Price Pilot!</p>
 <button (click)="onClick()">This is a sample API Call!</button>
+<p>Here is the result!: {{ message }}</p>
+<section class="content">
+  <app-topbar></app-topbar>
+  <router-outlet></router-outlet>
+</section>
