changed name and title on homepage

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1>{{ title }}</h1>
-<p>Welcome to the Housing Price Pilot!</p>
+<p>Welcome to adoore, your solution for <i>cross-country community comparison</i> (CCCC)!</p>
 <button (click)="onClick()">This is a sample API Call!</button>
 <p>Here is the result!: {{ message }}</p>
 <section class="content">
