new scope to project: added list that tracks user's selected cities

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1>{{ title }}</h1>
 <p>Welcome to adoore, your solution for <i>cross-country community comparison</i> (CCCC)!</p>
-<button (click)="onClick()">This is a sample API Call!</button>
-<p>Here is the result!: {{ message }}</p>
+<button style="padding-top: 10px; padding-bottom: 10px; margin-bottom: 10px; margin-top: 10px" (click)="onClick()">This is a sample API Call!</button>
+<p style="color:brown">Here is the result!: {{ message }}</p>
 <section class="content">
   <app-topbar></app-topbar>
   <router-outlet></router-outlet>
