--- a/frontend/src/app/topbar/topbar.component.html
+++ b/frontend/src/app/topbar/topbar.component.html
@@ -1,10 +1,8 @@
 <section>
-  <form>
+  <form id="search-input">
     <input type="text" placeholder="Filter by city" [(ngModel)]="cityInput" />
-    <button type="button" (click)="searchButton()">Search by city</button>
   </form>
 </section>
 <section class="results">
-  <app-scrolling-list></app-scrolling-list>
+  <app-cities-list></app-cities-list>
 </section>
-<p>Searching for {{ citySearch }}</p>
