--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,8 +1,7 @@
 <h1>{{ title }}</h1>
-<p>Welcome to adoore, your solution for <i>cross-country community comparison</i> (CCCC)!</p>
+<p>Welcome to adoore, your solution for <i>cross-country city comparison</i> (CCCC)!</p>
 <button style="padding-top: 10px; padding-bottom: 10px; margin-bottom: 10px; margin-top: 10px" (click)="onClick()">This is a sample API Call!</button>
 <p style="color:brown">Here is the result!: {{ message }}</p>
 <section class="content">
-  <app-topbar></app-topbar>
   <router-outlet></router-outlet>
 </section>
