--- a/frontend/src/app/cities-list/cities-list.component.html
+++ b/frontend/src/app/cities-list/cities-list.component.html
@@ -4,7 +4,7 @@
   </ul>
 </section>
 <section>
-  <button class="compare-button" (click)="console.log('Submit button pressed')">
-    Submit
-  </button>
+    <button class="compare-button" (click)="goToResults()">
+      Compare!
+    </button>
 </section>
