--- a/frontend/src/app/city-search-results/city-search-results.component.html
+++ b/frontend/src/app/city-search-results/city-search-results.component.html
@@ -1,6 +1,6 @@
-<section class="search-results">
-  <p>You searched for: </p>
-    <ul *ngFor="let city of userCitiesList">
-      <li>{{ city }}
-    </ul>
+<section>
+  <p>You searched for:</p>
+  <ul *ngFor="let userCity of userCitiesList">
+    <li>{{ userCity }}</li>
+  </ul>
 </section>
