--- a/frontend/src/app/topbar/topbar.component.scss
+++ b/frontend/src/app/topbar/topbar.component.scss
@@ -1,19 +1,51 @@
-/* Put these styles in: src/home/home.component.css */
+.search-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 20vh;
+  background-color: #605DC8;
 
-input[type="text"] {
-  border: solid 1px var(--primary-color);
-  padding: 10px;
-  border-radius: 8px;
-  margin-right: 4px;
-  display: inline-block;
-  width: 30%;
+
+  .search-bar {
+    display: flex;
+    align-items: center;
+    width: 60%;
+    max-width: 800px;
+    height: 60px;
+    background-color: #fff;
+    border-radius: 30px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+
+    input[type="text"] {
+      flex-grow: 1;
+      height: 100%;
+      border: none;
+      padding: 0 20px;
+      font-size: 18px;
+      outline: none;
+      border-radius: 30px 0 0 30px;
+
+      &::placeholder {
+        color: #b0b0b0;
+      }
+    }
+
+    button {
+      height: 100%;
+      background-color: #007bff;
+      color: #fff;
+      border: none;
+      padding: 0 20px;
+      font-size: 18px;
+      cursor: pointer;
+      border-radius: 0 30px 30px 0;
+      transition: background-color 0.3s, transform 0.3s;
+
+      &:hover {
+        background-color: #0056b3;
+        transform: scale(1.1);
+      }
+    }
+  }
 }
-
-button {
-  padding: 10px;
-  border: solid 1px var(--primary-color);
-  background: var(--primary-color);
-  color: white;
-  border-radius: 8px;
-}
-
