wip:core updated

--- a/frontend/src/app/city-search-results/city-search-results.component.html
+++ b/frontend/src/app/city-search-results/city-search-results.component.html
@@ -1,6 +1,6 @@
-<section>
+<section class="results-section slide-in">
   <p>You searched for:</p>
-  <ul *ngFor="let userCity of userCitiesList">
+  <ul class="results-list" *ngFor="let userCity of userCitiesList">
     <li>{{ userCity }}</li>
   </ul>
 </section>
