--- a/frontend/src/app/cities-list/cities-list.component.html
+++ b/frontend/src/app/cities-list/cities-list.component.html
@@ -1,11 +1,11 @@
-<section class="city-list-container">
+<section class="city-list-container fade-in">
   <ul *ngFor="let city of userCitiesList">
     <li class="list-item">{{ city }} <img ngSrc="././close-icon.png" alt="x" (click)="this.apiService.removeCity(city)"
                                           height="512" width="512"></li>
   </ul>
 </section>
 <section>
-    <button class="compare-button" (click)="goToResults()">
-      Compare!
-    </button>
+  <button class="compare-button" (click)="goToResults()">
+    Compare!
+  </button>
 </section>
