--- a/frontend/src/app/topbar/topbar.component.scss
+++ b/frontend/src/app/topbar/topbar.component.scss
@@ -1,51 +1,36 @@
+.topbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: #007bff;
+  color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+}
+
 .search-container {
   display: flex;
-  justify-content: center;
   align-items: center;
-  height: 20vh;
-  background-color: #605DC8;
+}
 
+.search-bar input {
+  padding: 10px;
+  border: none;
+  border-radius: 5px 0 0 5px;
+  border: 1px solid #ccc;
+  outline: none;
+}
 
-  .search-bar {
-    display: flex;
-    align-items: center;
-    width: 60%;
-    max-width: 800px;
-    height: 60px;
-    background-color: #fff;
-    border-radius: 30px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
+.search-bar button {
+  padding: 10px;
+  border: none;
+  border-radius: 0 5px 5px 0;
+  background-color: #28a745;
+  color: #fff;
+}
 
-    input[type="text"] {
-      flex-grow: 1;
-      height: 100%;
-      border: none;
-      padding: 0 20px;
-      font-size: 18px;
-      outline: none;
-      border-radius: 30px 0 0 30px;
-
-      &::placeholder {
-        color: #b0b0b0;
-      }
-    }
-
-    button {
-      height: 100%;
-      background-color: #007bff;
-      color: #fff;
-      border: none;
-      padding: 0 20px;
-      font-size: 18px;
-      cursor: pointer;
-      border-radius: 0 30px 30px 0;
-      transition: background-color 0.3s, transform 0.3s;
-
-      &:hover {
-        background-color: #0056b3;
-        transform: scale(1.1);
-      }
-    }
-  }
+.search-bar button:hover {
+  background-color: #218838;
 }
