--- a/frontend/src/app/cities-list/cities-list.component.html
+++ b/frontend/src/app/cities-list/cities-list.component.html
@@ -1,7 +1,6 @@
 <section class="city-list-container fade-in">
   <ul *ngFor="let city of userCitiesList">
-    <li class="list-item">{{ city }} <img ngSrc="././close-icon.png" alt="x" (click)="this.apiService.removeCity(city)"
-                                          height="512" width="512"></li>
+    <li class="list-item">{{ city }} <img src="close-icon.png" alt="x" (click)="this.apiService.removeCity(city)"></li>
   </ul>
 </section>
 <section>
