--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -5,6 +5,11 @@
     <h2 class="subtext">Welcome to adoore, your solution for <i>cross-country city comparison</i> (CCCC)!</h2>
   </div>
   <div class="content">
+    <div class="description-text" *ngIf="getTopbar()">
+      <h2>Find and Compare Cities</h2>
+      <p>Start by typing a city name to add it to your comparison list.</p>
+      <p>Then, click the compare button when you're ready!</p>
+    </div>
     <ng-container *ngIf="getTopbar()">
       <app-topbar></app-topbar>
     </ng-container>
