--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -62,7 +62,8 @@ ul {
 
 .content {
   display: flex;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-around;
   padding: 20px;
   background-color: rgba(255, 255, 255, 0.9);
   border-radius: 10px;
@@ -71,5 +72,26 @@ ul {
   position: relative;
   width: 80%;
   margin: 20px auto;
+}
+
+.city-list {
+  float: left;
+}
+
+.description-text {
+  float: right;
+  margin-bottom: 20px;
+
+  h2 {
+    margin: 0;
+    font-size: 1.5em;
+    color: #333;
+  }
+
+  p {
+    margin: 5px 0 0;
+    font-size: 1em;
+    color: #666;
+  }
 }
 
