--- a/frontend/src/app/cities-list/cities-list.component.scss
+++ b/frontend/src/app/cities-list/cities-list.component.scss
@@ -1,2 +1,12 @@
+.list-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 16px;
 
-
+  .close-icon {
+    cursor: pointer;
+    width: 14px; height: 14px;
+    margin-left: 15px;
+  }
+}
