--- a/frontend/src/app/topbar/topbar.component.html
+++ b/frontend/src/app/topbar/topbar.component.html
@@ -1,24 +1,20 @@
-<section class="content">
-  <div class="search-container">
-    <div class="search-bar">
-      <mat-form-field appearance="fill" class="mat-form-field">
-        <mat-label>Filter by city</mat-label>
-        <input type="text" matInput [formControl]="cityInputControl" [matAutocomplete]="auto">
-        <mat-autocomplete #auto="matAutocomplete">
-          <mat-option *ngFor="let option of filteredCities | async" [value]="option">
-            {{ option }}
-          </mat-option>
-        </mat-autocomplete>
-      </mat-form-field>
-      <button type="button" (click)="searchButton()">Add City</button>
-    </div>
-
-    <div class="city-list">
-      <app-cities-list></app-cities-list>
-    </div>
+<div class="search-container">
+  <div class="search-bar">
+    <mat-form-field appearance="fill" class="mat-form-field">
+      <mat-label>Filter by city</mat-label>
+      <input type="text" matInput [formControl]="cityInputControl" [matAutocomplete]="auto">
+      <mat-autocomplete #auto="matAutocomplete">
+        <mat-option *ngFor="let option of filteredCities | async" [value]="option">
+          {{ option }}
+        </mat-option>
+      </mat-autocomplete>
+    </mat-form-field>
+    <button type="button" (click)="searchButton()">Add City</button>
   </div>
-
-  <div class="results">
-    <button type="button" class="compare-button" (click)="goToResults()">Compare!</button>
+  <div class="city-list">
+    <app-cities-list></app-cities-list>
   </div>
-</section>
+</div>
+<div class="compare-container">
+  <button type="button" class="compare-button" (click)="goToResults()">Compare!</button>
+</div>
