--- a/frontend/src/app/topbar/topbar.component.scss
+++ b/frontend/src/app/topbar/topbar.component.scss
@@ -1,16 +1,47 @@
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: none;
+}
+
+.topbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  padding: 20px;
+  background-color: #f8f9fa;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+
 .search-container {
   display: flex;
-  flex-direction: row;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  justify-content: center;
+  align-items: center;
+}
+
+.description-text {
   margin-right: 20px;
+  text-align: left;
+
+  h2 {
+    margin: 0;
+    font-size: 1.5em;
+    color: #333;
+  }
+
+  p {
+    margin: 5px 0 0;
+    font-size: 1em;
+    color: #666;
+  }
 }
 
 .search-bar {
   display: flex;
   align-items: center;
-  margin-right: 20px;
 }
 
 .mat-form-field {
@@ -33,29 +64,15 @@ button:hover {
   background-color: #0056b3;
 }
 
-.results {
+.city-list {
+  flex: 1;
   display: flex;
-  flex-direction: row;
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  justify-content: center;
 }
 
-.result-item {
-  margin-bottom: 10px;
-  padding: 10px;
-  border-bottom: 1px solid #ddd;
-}
-
-a {
-  color: #007bff;
-  text-decoration: none;
-  transition: color 0.3s ease;
-}
-
-a:hover {
-  color: #0056b3;
+.compare-container {
+  margin-top: 20px;
+  text-align: center;
 }
 
 .compare-button {
