first line graph with temp data

--- a/frontend/src/app/city-search-results/city-search-results.component.html
+++ b/frontend/src/app/city-search-results/city-search-results.component.html
@@ -4,3 +4,6 @@
     <li>{{ this.apiService.capitalizeFirstLetter(userCity) }}</li>
   </ul>
 </section>
+<section class="charts">
+  <app-line-chart></app-line-chart>
+</section>
