--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -14,7 +14,7 @@ ul {
 
 .fullscreen-image {
   height: 100vh;
-  background: url('/assets/img/background-image.jpg') no-repeat center center/cover;
+  background: url('/Users/ngupta/repositories/housingpricepilot/src/main/webapp/assets/background-image.jpg') no-repeat center center/cover;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -60,38 +60,39 @@ ul {
   transform: translateX(-50%);
 }
 
-.content {
+.content-container {
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  padding: 20px;
-  background-color: rgba(255, 255, 255, 0.9);
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+  background-color: rgba(255, 255, 255, 0.95);
   border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   z-index: 2;
   position: relative;
   width: 80%;
   margin: 20px auto;
 }
 
-.city-list {
-  float: left;
-}
-
 .description-text {
-  float: right;
+  text-align: center;
   margin-bottom: 20px;
 
   h2 {
-    margin: 0;
-    font-size: 1.5em;
+    margin: 0 0 10px 0;
+    font-size: 2em;
     color: #333;
   }
 
   p {
-    margin: 5px 0 0;
-    font-size: 1em;
+    margin: 5px 0;
+    font-size: 1.1em;
     color: #666;
   }
 }
 
+.dynamic-content {
+  width: 100%;
+  margin-top: 20px;
+}
