--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,8 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
+@font-face {
+  font-family: 'SurvivalInstinct';
+  src: url('http://localhost:8080/fonts/SurvivalInstinx-1jnDj.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'SurvivalInstinct', sans-serif;
   background-color: #f7f9fc;
   color: #333;
   overflow: hidden; /* Prevent scrollbars */
@@ -42,7 +49,7 @@ a:hover {
   position: relative;
   width: 100vw;
   height: 100vh;
-  background: url('/Users/ngupta/repositories/housingpricepilot/src/main/webapp/assets/background-image.jpg') no-repeat center center/cover;
+  background: url('http://localhost:8080/assets/background-image.jpg') no-repeat center center/cover;
   display: flex;
   justify-content: center;
   align-items: center;
