--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -14,7 +14,7 @@ ul {
 
 .fullscreen-image {
   height: 100vh;
-  background: url('/Users/ngupta/repositories/housingpricepilot/src/main/webapp/assets/background-image.jpg') no-repeat center center/cover;
+  background: url('http://localhost:8080/HousingPricePilot-1.0-SNAPSHOT/assets/background-image.jpg') no-repeat center center/cover;
   display: flex;
   justify-content: center;
   align-items: center;
