--- a/frontend/src/app/topbar/topbar.component.html
+++ b/frontend/src/app/topbar/topbar.component.html
@@ -9,7 +9,7 @@
         </mat-option>
       </mat-autocomplete>
     </mat-form-field>
-    <button type="button" (click)="searchButton()">Add City</button>
+    <button type="button" class="add-city-button" (click)="searchButton()">Add City</button>
   </div>
   <div class="city-list">
     <app-cities-list></app-cities-list>
