--- a/frontend/src/app/city-search-results/city-search-results.component.scss
+++ b/frontend/src/app/city-search-results/city-search-results.component.scss
@@ -5,7 +5,7 @@ $text-color: #333333;
 $search-background-color: #ffffff;
 $chart-box-background-color: #ffffff;
 $box-shadow-color: rgba(0, 0, 0, 0.1);
-$font-family: 'Arial, sans-serif';
+$font-family: 'Lato';
 
 .dashboard {
   display: flex;
