--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -7,9 +7,23 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'SimpleTix';
+  src: url('assets/fonts/simpletix.otf') format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Lato';
+  src: url('assets/fonts/Lato-Regular.ttf') format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   margin: 0;
-  font-family: 'SurvivalInstinct', sans-serif;
+  font-family: 'sans-serif';
   background-color: #f7f9fc;
   color: #333;
   overflow: hidden; /* Prevent scrollbars */
@@ -18,6 +32,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
   margin: 0;
+  font-family: 'sans-serif';
 }
 
 button {
@@ -29,6 +44,7 @@ button {
   color: #fff;
   font-size: 16px;
   transition: background-color 0.3s ease;
+  font-family: 'sans-serif';
 }
 
 button:hover {
